feat: Makes the navbar responsive

--- a/Project3/index.html
+++ b/Project3/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/x-icon" href="/assets/logo.png" />
     <link rel="stylesheet" href="style.css" />
+
     <title>SolidBuild</title>
   </head>
   <body>
@@ -14,10 +15,14 @@
         <span>SolidBuild</span>
       </div>
 
-      <div id="nav-right">
-        <a class="link" href="/how_it_works">Home</a
-        ><a class="link" href="/services">FAQ</a>
+      <div class="nav-right">
+        <a class="link" href="#">Home</a><a class="link" href="#">FAQ</a>
         <button class="nav-btn2">Contact us</button>
+      </div>
+      <div class="hamburger">
+        <span class="hamburger_bar"></span>
+        <span class="hamburger_bar"></span>
+        <span class="hamburger_bar"></span>
       </div>
     </nav>
     <main>
@@ -27,11 +32,6 @@
           Partner.
         </h1>
         <img class="hero_img" src="/images/house.jpg" alt="" />
-        <!-- <div class="hero_img"></div> -->
-        <!-- <h3 class="hero_subtext">
-          Disy is a minimalist Design System/UI kit to help you build
-          human-centered product experience.
-        </h3> -->
       </section>
       <section class="services_section">
         <h1 class="services_heading">Services</h1>
@@ -60,5 +60,6 @@
         </div>
       </section>
     </main>
+    <script src="./script.js"></script>
   </body>
 </html>
