--- a/Project7/index.html
+++ b/Project7/index.html
@@ -90,7 +90,7 @@
             <p class="invalid">Confirm password not equal to original</p>
           </div>
         </div>
-        <button type="button" id="btn" onclick="handleSubmit(e)">Submit</button>
+        <button type="button" id="btn" onclick="handleSubmit()">Submit</button>
       </form>
     </section>
     <script src="/script.js"></script>
